--- a/style.css
+++ b/style.css
@@ -12,11 +12,13 @@ body{
 }
 .sdivider{
     background: #C14953;
-    height:0.5vh;
-    width:2vw;
+    height:1vh;
+    width:3vw;
+    padding:10vh;
 }
 .divider{
     background: #C14953;
-    height:0.5vh;
-    width:4vw;
+    height:1vh;
+    width:5vw;
+    padding:10vh;
 }
