--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@ body{
 }
 .sdivider{
     background: #C14953;
-    height:1vh;
-    width:3vw;
-    padding:10vh;
+    height:2vh;
+    width:4vw;
+    padding-bottom:10vh;
 }
 .divider{
     background: #C14953;
-    height:1vh;
-    width:5vw;
-    padding:10vh;
+    height:2vh;
+    width:6vw;
+    padding-bottom:10vh;
 }
